force-app/main/default/objects/Subsidy__c/Subsidy__c.object-meta.xml
<CustomObject>
    <label>Subsidy</label>
    <nameField>
        <label>Subsidy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsidy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>