force-app/main/default/objects/Subsidy__c/fields/Maximum_EV_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Maximum_EV_Subsidy__c</fullName>
    <label>Maximum EV Subsidy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>