force-app/main/default/objects/Subsidy__c/fields/Road_Tax_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Road_Tax_Exemption__c</fullName>
    <label>Road Tax Exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>