force-app/main/default/objects/Subsidy__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Assam</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharastra</fullName>
                <label>Maharashtra</label>
            </value>
            <value>
                <fullName>Meghalaya</fullName>
            </value>
            <value>
                <fullName>Orissa</fullName>
                <label>Odisha</label>
            </value>
            <value>
                <fullName>Panjab</fullName>
                <label>Punjab</label>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Tamilnadu</fullName>
                <label>Tamil Nadu</label>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
            <value>
                <fullName>West Bengal</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
                <isActive>false</isActive>
                <label>Delhi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>