force-app/main/default/objects/Subsidy__c/fields/Subsidy_Code__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Code__c</fullName>
    <externalId>true</externalId>
    <label>Subsidy Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>