force-app/main/default/objects/Subsidy__c/fields/Subsidy_Per_KWH__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Per_KWH__c</fullName>
    <label>Subsidy Per KWH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>