force-app/main/default/objects/Subsidy__c/validationRules/Start_date_and_End_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_and_End_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Start_Date__c)),
NOT(ISBLANK(End_Date__c)),
Start_Date__c &lt;&gt; End_Date__c,
End_Date__c &lt;= Start_Date__c
)</errorConditionFormula>
    <errorMessage>End date should not be less than start date</errorMessage>
</ValidationRule>